<resources>
    <string name="app_name">SpaceX</string>
    <string name="title_activity_settings">Settings</string>
    <string name="channel_name" translatable="false">SpaceX App</string>
    <string name="channel_description" translatable="false">SpaceX channel description</string>
    <string name="notification_channel_name">SpaceX Launch Notifications</string>
    <string name="notification_channel_description">This channel is used to notify you when one a SpaceX launch mission is about to start.</string>
    <string name="spacex_logo">SpaceX logo</string>
    <string name="mission_patch">Mission patch</string>
    <string name="rocket_image">Rocket image</string>
    <string name="map_sample">Map sample</string>
    <string name="core_image">Core image</string>
    <string name="capsule_image">Capsule image</string>
    <string name="mission_webcast">Mission webcast preview</string>
    <string name="video_play">Play button</string>
    <string name="launch_pad_satellite_view">Launch pad satellite view</string>
    <string name="landing_pad_satellite_view">Landing pad satellite view</string>
    <string name="no_connection_icon">No connection icon</string>
    <string name="sample_image">Sample image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="label_nav_launches">Launches</string>
    <string name="label_nav_vehicles">Vehicless</string>
    <string name="label_nav_pads">Pads</string>
    <string name="label_nav_about_spacex">About SpaceX</string>
    <string name="label_nav_company">Company</string>
    <string name="label_nav_history">History</string>
    <string name="label_nav_settings_notifications">Settings &amp; Notifications</string>
    <string name="label_nav_media">What\'s Hot</string>
    <string name="label_nav_notifications">Notifications</string>
    <string name="label_nav_settings">Settings</string>
    <string name="label_tab_missions">Missions</string>
    <string name="label_tab_upcoming">Upcoming</string>
    <string name="label_tab_past">Past</string>
    <string name="label_tab_rockets">Rockets</string>
    <string name="label_tab_cores">Cores</string>
    <string name="label_tab_capsules">Capsules</string>
    <string name="label_tab_launch_pads">Launch Pads</string>
    <string name="label_tab_landing_pads">Landing Pads</string>
    <string name="label_launch_date">Launch Date</string>
    <string name="label_rocket_type">Rocket Type</string>
    <string name="label_launch_site">Launch Site</string>
    <string name="label_payload">Payload</string>
    <string name="label_id">ID:</string>
    <string name="label_type">Type:</string>
    <string name="label_mass">Mass:</string>
    <string name="label_orbit">Orbit:</string>
    <string name="label_second_stage">Second Stage</string>
    <string name="label_block">Block Type:</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_first_stage">First Stage</string>
    <string name="label_core_serial">Core Serial:</string>
    <string name="label_left_booster_serial">Left Booster Serial:</string>
    <string name="label_core_booster_serial">Core Booster Serial:</string>
    <string name="label_right_booster_serial">Right Booster Serial:</string>
    <string name="label_reused">Reused:</string>
    <string name="label_reused_payload">\ (Reused)</string>
    <string name="label_land_successful">Landing Successful:</string>
    <string name="label_land_type">Landing Type:</string>
    <string name="label_land_pad">Landing Pad:</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_location">Location</string>
    <string name="label_status">Status</string>
    <string name="label_vehicles_launched">Vehicles Launched</string>
    <string name="launch_pad_location">%s, %s</string>
    <string name="label_google">Google</string>
    <string name="location_coordinates">%s,%s</string>
    <string name="landing_pad_location">%s, %s</string>
    <string name="label_vehicles_landed">Vehicles Landed</string>
    <string name="label_attempted_landings">Attempted Landings:</string>
    <string name="label_successful_landings">Successful Landings:</string>
    <string name="label_landing_type">Landing Type</string>
    <string name="asds">Autonomous Spaceport Drone Ship</string>
    <string name="rtls">Return To Launch Site</string>
    <string name="wiki_page">See Wikipedia page for more details.</string>
    <string name="label_stats">Landing Stats</string>
    <string name="no_core_details">No details available yet.</string>
    <string name="label_block_type">Block</string>
    <string name="label_core_stats">Stats</string>
    <string name="label_rtls_attempts">RTLS Attempts</string>
    <string name="label_rtls_landings">RTLS Landings</string>
    <string name="label_asds_attempts">ASDS Attempts</string>
    <string name="label_asds_landings">ASDS Landings</string>
    <string name="format_block_type">Block %s</string>
    <string name="format_attempts_landings">%s / %s</string>
    <string name="label_false">False</string>
    <string name="label_true">True</string>
    <string name="no_capsule_details">No details available yet.</string>
    <string name="label_capsule_type">Type</string>
    <string name="label_original_launch">Original Launch</string>
    <string name="label_capsule_stats">Stats</string>
    <string name="label_landings">Landings</string>
    <string name="label_reuse_count">Reuse Count</string>
    <string name="label_capsule_missions">Missions</string>
    <string name="label_water_landings">Water Landing</string>
    <string name="status_active">Active</string>
    <string name="status_retired">Retired</string>
    <string name="status_destroyed">Destroyed</string>
    <string name="status_lost">Lost</string>
    <string name="status_unknown">Unknown</string>
    <string name="label_first_flight">First Flight</string>
    <string name="label_cost_per_launch">Cost Per Launch</string>
    <string name="label_active">Active</string>
    <string name="label_inactive">Inactive</string>
    <string name="label_rocket_height">Height:</string>
    <string name="label_rocket_diameter">Diameter:</string>
    <string name="label_rocket_mass">Mass:</string>
    <string name="label_rocket_stages">Stages:</string>
    <string name="label_engines">Engines:</string>
    <string name="label_burn_time">Burn Time:</string>
    <string name="label_thrust_at_sea_level">Thrust at sea level:</string>
    <string name="label_thrust_in_vacuum">Thrust in vacuum:</string>
    <string name="label_thrust">Thrust:</string>
    <string name="label_payload_to_leo">LEO:</string>
    <string name="label_payload_to_gto">GTO:</string>
    <string name="label_payload_to_mars">Mars:</string>
    <string name="label_payload_to_pluto">Pluto:</string>
    <string name="label_payload_height">Height:</string>
    <string name="label_payload_diameter">Diameter:</string>
    <string name="label_payload_option">Option:</string>
    <string name="label_payload_option1">Option 1:</string>
    <string name="label_payload_option2">Option 2:</string>
    <string name="label_fuel_amount">Fuel Amount:</string>
    <string name="fuel_amount">%s t</string>
    <string name="burn_time">%d seconds</string>
    <string name="thrust_kN">%s kN</string>
    <string name="thrust_lbf">%s lbf</string>
    <string name="dimensions_meters">%.1f m</string>
    <string name="dimensions_feet">%.1f ft</string>
    <string name="mass_kg">%s kg</string>
    <string name="mass_lbs">%s lbs</string>
    <string name="label_overview">Technical Overview</string>
    <string name="label_payload_weights">Payload Weights</string>
    <string name="reused_x_times">\ (%s times)</string>
    <string name="reused_1_time">\ (%s time)</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_asds">Autonomous Spaceport Drone Ship</string>
    <string name="label_rtls">Return To Launch Site</string>
    <string name="label_ocisly">Of Course I Still Love You</string>
    <string name="label_jrti">Just Read The Instructions</string>
    <string name="label_asog">A Shortfall Of Gravitas</string>
    <string name="label_lz1">Landing Zone 1</string>
    <string name="label_lz2">Landing Zone 2</string>
    <string name="label_orbit_beo">Beyond Earth Orbit</string>
    <string name="label_orbit_dro">Distant Retrograde Orbit</string>
    <string name="label_orbit_geo">Geostationary Orbit</string>
    <string name="label_orbit_gto">Geostationary Transfer Orbit</string>
    <string name="label_orbit_heo">High Earth Orbit</string>
    <string name="label_orbit_leo">Low Earth Orbit</string>
    <string name="label_orbit_vleo">Very Low Earth Orbit</string>
    <string name="label_orbit_loi">Lunar Orbit Insertion</string>
    <string name="label_orbit_meo">Medium Earth Orbit</string>
    <string name="label_orbit_moi">Mars Orbit Insertion</string>
    <string name="label_orbit_so">Suborbital</string>
    <string name="label_orbit_tli">Trans-Lunar Injection</string>
    <string name="label_orbit_tmi">Trans-Mars Injection</string>
    <string name="label_orbit_po">Polar Orbit</string>
    <string name="label_orbit_iss">International Space Station</string>
    <string name="label_orbit_sso">Sun-Synchronous Orbit</string>
    <string name="label_orbit_hco">Heliocentric Orbit</string>
    <string name="label_orbit_se_l1">Sun-Earth Lagrange Point 1</string>
    <string name="label_es_l1">ES-L1</string>
    <string name="label_se_l1">SE-L1</string>
    <string name="sound_on">Sound on</string>
    <string name="sound_off">Sound off</string>
    <string name="loading_missions">Loading launches&#8230;</string>
    <string name="loading_rockets">Loading rockets&#8230;</string>
    <string name="loading_launch_pads">Loading launch pads&#8230;</string>
    <string name="loading_landing_pads">Loading landing pads&#8230;</string>
    <string name="loading_cores">Loading cores&#8230;</string>
    <string name="loading_capsules">Loading capsules&#8230;</string>
    <string name="no_launches_available">No launches available</string>
    <string name="no_rocket_available">No rockets available</string>
    <string name="no_launch_pads_available">No launch pads available</string>
    <string name="no_landing_pads_available">No landing pads available</string>
    <string name="no_cores_available">No cores available</string>
    <string name="no_capsules_available">No capsules available</string>
    <string name="mission_up_to_date">Launch is up to date!</string>
    <string name="mission_updated">Launch updated!</string>
    <string name="launch_pad_up_to_date">Launch pad details are up to date!</string>
    <string name="launch_pad_updated">Launch pad updated!</string>
    <string name="rocket_up_to_date">Rocket details are up to date!</string>
    <string name="rocket_updated">Rocket updated!</string>
    <string name="no_internet">Huston, we have a problem!\nSwipe to retry</string>
    <string name="unknown_error">Elon, we have a problem!\nSwipe to retry?</string>
    <string name="no_connection">No internet connection</string>
    <string name="song_credits">ARTIST: TEST SHOT STARFISH\nFLIGHT-PROVEN</string>
    <string name="skip">Swipe to skip intro</string>
    <string name="notifications_key" translatable="false">news</string>
    <string name="summary_on">Enabled</string>
    <string name="summary_off">Disabled</string>
    <string name="pref_units_label">Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_acronyms_title">Show acronyms meaning</string>
    <string name="pref_acronyms_key" translatable="false">acronyms_key</string>
</resources>