<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/notifications_key"
        android:summaryOff="@string/summary_off"
        android:summaryOn="@string/summary_on"
        android:title="@string/notifications_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_acronyms_key"
        android:summaryOff="@string/summary_off"
        android:summaryOn="@string/summary_on"
        android:title="@string/pref_acronyms_title" />

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

</PreferenceScreen>