<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context="com.about.future.spacex.ui.StarfieldActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:contentDescription="@string/spacex_logo"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/milky" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@drawable/gradient" />

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shutter_background_color="@color/colorTransparent"
        app:surface_type="none" />

    <com.about.future.spacex.model.stars.StarField
        android:id="@+id/starfield"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/logoPlacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/logoSpaceX"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/spacex_logo"
            app:srcCompat="@drawable/ic_spacex_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        </LinearLayout>

    <ImageView
        android:id="@+id/volumeOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/volume_margin_bottom"
        android:layout_marginEnd="@dimen/volume_margin_end"
        android:contentDescription="@string/sound_on"
        android:padding="@dimen/vertical_margin"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_volume_on" />

    <ImageView
        android:id="@+id/volumeOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/volume_margin_bottom"
        android:layout_marginEnd="@dimen/volume_margin_end"
        android:contentDescription="@string/sound_off"
        android:padding="@dimen/vertical_margin"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_volume_off" />

    <ImageView
        android:id="@+id/song_credits"
        android:layout_width="216dp"
        android:layout_height="36dp"
        android:alpha="0.8"
        android:src="@drawable/credits_artist"
        android:contentDescription="@string/song_credits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        android:layout_marginStart="@dimen/music_credits_margin_start"
        android:layout_marginBottom="@dimen/music_credits_margin_bottom"/>

</androidx.constraintlayout.widget.ConstraintLayout>
